--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 /*
 Theme Name: Ava
-Theme URI: https://wordpress.org/themes/twentytwenty/
 Author: Kazi Mehnaz
+Text Domain: ava
+Theme URI: https://github.com/kazi-mehnaz/Ava
 Author URI: https://github.com/kazi-mehnaz
-Description: Ava is a clean and multipurpose theme with new look.
 Version: 1.0.0
 Requires at least: 5.0
 Tested up to: 5.4
 Requires PHP: 7.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: ava
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
+Description: Ava is a clean and multipurpose theme with new look.
+Tags: blog, news, article
 */
